workspace(name = "com_github_3rdparty_eventuals_grpc_examples")

########################################################################

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

########################################################################

git_repository(
    name = "com_github_3rdparty_eventuals",
    commit = "08a6e841321744417b0ec8f572a6572693cbedc1",
    recursive_init_submodules = True,
    remote = "https://github.com/3rdparty/eventuals",
    shallow_since = "1705354738 +0100",
)

load("@com_github_3rdparty_eventuals//bazel:submodules.bzl", eventuals_submodules = "submodules")

eventuals_submodules()

load("@com_github_3rdparty_eventuals//bazel:repos.bzl", eventuals_repos = "repos")

eventuals_repos()

load("@com_github_3rdparty_eventuals//bazel:deps.bzl", eventuals_deps = "deps")

eventuals_deps()

########################################################################

load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")

grpc_extra_deps()

########################################################################
